--- a/assets/css/override.css
+++ b/assets/css/override.css
@@ -4,3 +4,36 @@
     font-weight: 600;
     letter-spacing: -1px;
 }
+
+
+summary {
+    font-size: 1.2rem;
+    font-weight: 600;
+    cursor: pointer;
+    padding: 0.5em;
+    background-color: #f7f7f7;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    transition: background-color 0.2s ease-in-out;
+  }
+  
+  summary:hover {
+    background-color: #eaeaea;
+  }
+  
+  details[open] > summary::after {
+    content: "▲";
+    float: right;
+    margin-left: 10px;
+  }
+  
+  summary::after {
+    content: "▼";
+    float: right;
+    margin-left: 10px;
+  }
+  
+  details[open] > summary::after {
+    content: "▲";
+  }
+  
