adding custom css and header

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,5 +1,5 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
-
+<link rel="stylesheet" href="{{ '/assets/css/override.css' | relative_url }}">
 <!-- end custom head snippets -->
