--- a/assets/css/override.css
+++ b/assets/css/override.css
@@ -9,7 +9,7 @@
 summary {
     font-size: 1.2rem;
     font-weight: 600;
-    color: red
+    color: red;
     cursor: pointer;
     padding: 0.5em;
     background-color: #f7f7f7;
