--- a/assets/css/override.css
+++ b/assets/css/override.css
@@ -9,23 +9,18 @@
 summary {
     font-size: 1.2rem;
     font-weight: 600;
-    color: red;
     cursor: pointer;
     padding: 0.5em;
     background-color: #f7f7f7;
     border: 1px solid #ddd;
     border-radius: 5px;
     transition: background-color 0.2s ease-in-out;
+    margin-bottom: 1rem;
   }
   
   summary:hover {
     background-color: #eaeaea;
   }
   
-  details[open] > summary::after {
-    content: "▲";
-    float: right;
-    margin-left: 10px;
-  }
 
   
